--- a/src/main/resources/templates/products/familyTree.html
+++ b/src/main/resources/templates/products/familyTree.html
@@ -173,7 +173,7 @@ Learn more: https://developers.facebook.com/docs/sharing/webmasters -->
                             C-130,46 120,46 420,-137'/>
                             <text x="50%" y="0%" dominant-baseline="middle" text-anchor="middle">
                                 <textPath xlink:href="#curve" id="bannerTextPath">
-                                    familietræ
+                                    Familietræ
                                 </textPath>
                             </text>
                         </svg>
