--- a/src/main/resources/templates/home/productExample.html
+++ b/src/main/resources/templates/home/productExample.html
@@ -25,7 +25,10 @@
                     <section id="generalInformation">
                         <span class="title" th:text="#{home.intro.title}"></span><br>
                         <img th:src="@{~/img/productPage/Artboard 3.png}" alt="Tree Design" class=""><br>
-                        <span th:text="#{home.intro.text}"></span><br>
+                        <span th:text="#{home.intro.text}"></span><br><br>
+                        <button class="createNowBtn" href="/products/familyTree">
+                            <span th:text="#{home.create.now}"></span>
+                        </button>
                     </section>
                     <section id="development">
                         <img th:src="@{~/img/productPage/Artboard 4.png}" alt="Tree Design" class="image">
@@ -58,6 +61,10 @@
                             <span th:text="#{home.team.text.two}"></span>
                         </div>
                     </section>
+
+                    <button class="createNowBtn" href="/products/familyTree">
+                        <span th:text="#{home.create.now}"></span>
+                    </button>
 
                 </div>
             </div>
