--- a/src/main/resources/templates/products/mobile.html
+++ b/src/main/resources/templates/products/mobile.html
@@ -7,6 +7,7 @@
     <link th:href="@{/styles/products.css}" rel="stylesheet">
     <link th:href="@{/styles/productNavbar.css}" rel="stylesheet">
     <link th:href="@{/styles/productFooter.css}" rel="stylesheet">
+    <link th:href="@{/styles/emailSubmit.css}" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Share+Tech">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Spectral">
     <script th:src="@{/js/login.js}"></script>
@@ -23,54 +24,6 @@
             align-content: center;
             text-align: center;
         }
-
-        #emailContainer
-        {
-            margin: 4vh;
-        }
-
-        #emailInput
-        {
-            font-size: 18px;
-            line-height: 18px;
-            background: none;
-            border: 2px var(--actionColor) solid;
-            border-radius: 5px;
-            height: 37px;
-            min-width: 20vw;
-            max-width: 30vw;
-            width: 100%;
-            margin-right: 1vw;
-            color: black;
-            opacity: 1;
-            padding-left: 7px;
-        }
-
-        #emailInput::placeholder
-        {
-            color: black;
-            opacity: 1;
-            font-size: 18px;
-            line-height: 18px;
-        }
-
-        #emailSubmitBtn
-        {
-            font-size: 18px;
-            background: var(--actionColor);
-            border-radius: 7px;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
-            height: 37px;
-            width: 85px;
-            border: none;
-            color: white;
-        }
-
-        #emailSubmitBtn:hover
-        {
-            box-shadow: none;
-            transform:scale(0.9);
-        }
     </style>
 </head>
 <body>
@@ -81,8 +34,8 @@
                 <div id="product">
                     <div class="center">
                         <h2 style="font-size: 50px">Ups!</h2>
-                        <h3 style=""><span th:text="#{mobile.text}"></span></h3>
-                        <h3 style="">
+                        <h3><span th:text="#{mobile.text}"></span></h3>
+                        <h3>
                             <span th:text="#{mobile.text.two}"></span>
                             <span style="color:var(--mainColor); font-weight:bold; font-decoration:underline;" th:text="#{mobile.text.treecreate}"></span>
                             <span th:text="#{mobile.text.three}"></span>
