--- a/src/main/resources/templates/products/productTemplate.html
+++ b/src/main/resources/templates/products/productTemplate.html
@@ -98,10 +98,10 @@
                 <hr>
                 <!-- T&C for account creation -->
                 <div style="display: flex; flex-direction: row; justify-content: center">
-                    <p style="font-size:12px;"><span th:text="#{basket.terms.and.conditions.text}"></span> <a
+                    <p style="font-size:12px;"><span th:text="#{signup.terms.and.conditions.text}"></span> <a
                             href="https://docs.google.com/document/d/1lMEzya3HeEzvLG6wwDYhAw0memVBxNc8J3q-4sJN-u8/edit"
                             style="color:var(--actionColor);" id="accountTermsAndConditions"
-                            target="_blank"><span th:text="#{basket.terms.and.conditions.link}"></span> </a>
+                            target="_blank"><span th:text="#{signup.terms.and.conditions.link}"></span> </a>
                     </p>
                 </div>
 
