--- a/src/main/resources/templates/profile/forgotPassword.html
+++ b/src/main/resources/templates/profile/forgotPassword.html
@@ -22,7 +22,7 @@
     <div id="content">
         <div id="productContainer">
             <div id="product" style="display: flex; flex-direction: column">
-                <label for="forgotInputEmail" style="font-size: var(--fontRegular)">Your email:</label>
+                <label for="forgotInputEmail" style="font-size: var(--fontRegular)"><span th:text="#{home.subscribe.input}"></span></label>
                 <input type="email" id="forgotInputEmail" class="forgotInput" maxlength="255"
                        placeholder="Your email...">
                 <input type="submit" value="Send password reset link" id="forgotSubmitBtn" class="forgotSubmit"
