--- a/src/main/resources/templates/profile/invalidResetLink.html
+++ b/src/main/resources/templates/profile/invalidResetLink.html
@@ -22,8 +22,8 @@
     <div id="content">
         <div id="productContainer">
             <div id="product" style="display: flex; flex-direction: column">
-                <h2>It seems the links was invalid</h2>
-                <span>If you are sure the link was correct, please contact us at info@treecreate.dk</span>
+                <h2><span th:text="#{home.invalid.source}"></span></h2>
+                <span th:text="#{basket.issue.text}"></span>
             </div>
         </div>
     </div>
