--- a/src/main/resources/templates/products/mobile.html
+++ b/src/main/resources/templates/products/mobile.html
@@ -8,11 +8,13 @@
     <link th:href="@{/styles/productNavbar.css}" rel="stylesheet">
     <link th:href="@{/styles/productFooter.css}" rel="stylesheet">
     <link th:href="@{/styles/emailSubmit.css}" rel="stylesheet">
+    <link th:href="@{/styles/popup.css}" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Share+Tech">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Spectral">
     <script th:src="@{/js/login.js}"></script>
     <script th:src="@{/js/basket.js}"></script>
     <script th:src="@{/js/landingPage.js}"></script>
+    <script th:src="@{/js/specialEmail.js}"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <style>
@@ -44,9 +46,11 @@
                         <div id="emailContainer">
                             <input type="email" id="emailInput" name="newsletterEmail"
                                    th:placeholder="#{landing.comingSoon.subscribe.input}"
+                                   pattern="^\\b[\\w.!#$%&’*+\\/=?^`{|}~-]+@[\\w-]+(?:\\.[\\w-]+)+\\b$"
                                    required>
-                            <button id="emailSubmitBtn" type="button" onclick="submitPopup()"
-                                    th:text="#{landing.submit}"></button>
+                            <button id="emailSubmitBtn" type="button" onclick="sendRequest()"
+                                        th:text="#{landing.submit}"></button>
+                            <span id="submitPopup" class="infoPopupText">Thanks for submitting your email </span>
                         </div>
                     </div>
                 </div>
