--- a/src/main/resources/static/styles/treeCollection.css
+++ b/src/main/resources/static/styles/treeCollection.css
@@ -89,7 +89,11 @@
     filter: drop-shadow(0 0 3px rgba(0, 0, 0, 0));
 }
 
-#checkoutButton
+#checkoutButton, #addDesignButton
 {
+    text-align: center;
     visibility: hidden;
+    font-size: var(--fontRegular);
+    width:40%;
+    margin: 1vh 0 1vh 0;
 }
