--- a/src/main/resources/static/styles/productNavbar.css
+++ b/src/main/resources/static/styles/productNavbar.css
@@ -119,3 +119,23 @@ a::before {
     width: 15vh;
     vertical-align: middle;
 }
+
+@media all and (min-width: 200px) and (max-width: 1024px)
+{
+    #navBar
+    {
+        padding: 1vh 0 0 0;
+        height: 4vh;
+        min-height: 0vh !important;
+    }
+
+    #navBar .icon
+    {
+        width: 1.5vh;
+    }
+
+    #treecreateLogo
+    {
+        width: 7vh;
+    }
+}
