--- a/src/main/resources/static/styles/profile.css
+++ b/src/main/resources/static/styles/profile.css
@@ -130,3 +130,16 @@ a:hover
     transform:scale(0.9);
     filter: drop-shadow(0 0 3px rgba(0, 0, 0, 0));
 }
+
+@media all and (min-width: 200px) and (max-width: 1024px)
+{
+    #contentContainer
+    {
+        padding-bottom: 0;
+    }
+
+    #details
+    {
+        margin-bottom: 13vh;
+    }
+}
