--- a/src/main/resources/templates/products/familyTree.html
+++ b/src/main/resources/templates/products/familyTree.html
@@ -113,21 +113,20 @@ Learn more: https://developers.facebook.com/docs/sharing/webmasters -->
                                 </div>
                             </div>
                         </div>
-                        <div id="addToBasketPrice" class="addToBasketDetail">
-                            <label for="priceInput" id="priceLabel"><span th:text="#{basket.price}"></span> </label>
-                            <input type="text" name="priceInput" id="priceInput" value="695kr" readonly>
-                        </div>
-                        <div id="addToBasketButtonContainer" class="addToBasketDetail">
+                        <div id="addToBasketButtonContainer" class="addToBasketDetail" style=width:10vw>
                             <div id="recommendedSizes">
                                 <p>
-                                    Recommended size: <br>
-                                    20x20 | up to 20 names <br>
-                                    25x25 | up to 30 names <br>
-                                    30x30 | up to 40 names <br>
+                                    Add four or more trees to your order in total<br>
+                                    and get 25% off your entire transaction <br>
                                 </p>
+                                <div id="addToBasketPrice" class="addToBasketDetail">
+                                    <label for="priceInput" id="priceLabel"><span th:text="#{basket.price}"></span> </label>
+                                    <input type="text" name="priceInput" id="priceInput" value="695kr" readonly>
+                                </div>
                                 <input type="button" id="addToBasketButton" value="ADD TO BASKET"
                                        onclick="addToBasket()" readonly>
                             </div>
+                            <!-- <div style="color:darkgreen; font-size:12px">You are now saving 25%!</div> -->
                         </div>
                     </section>
                 </section>
