--- a/src/main/resources/templates/home/productExample.html
+++ b/src/main/resources/templates/home/productExample.html
@@ -13,6 +13,7 @@
     <script th:src="@{/js/login.js}"></script>
     <script th:src="@{/js/basket.js}"></script>
     <script th:src="@{/js/cookiePrompt.js}"></script>
+    <script th:src="@{/js/productExample.js}"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 </head>
@@ -74,7 +75,7 @@
                             <input type="email" id="emailInput" name="newsletterEmail"
                                    th:placeholder="#{home.subscribe.input}"
                                    required>
-                            <button id="emailSubmitBtn" type="button" onclick="submitPopup()"
+                            <button id="emailSubmitBtn" type="button" onclick="submitNewsletter()"
                                     th:text="#{landing.submit}"></button>
                         </div>
                     </div>
