--- a/src/main/resources/templates/profile/orders.html
+++ b/src/main/resources/templates/profile/orders.html
@@ -54,6 +54,7 @@
                 <div class="orderDesignInfo orderInfo">
                     <span class="orderTitle">Designs:</span>
                     <section class="orderDesignContainer">
+                        <span style="display: none" class="orderDesignId orderDesignEntry">id</span>
                         <span class="orderDesignName orderDesignEntry">N/A</span>
                         <span class="orderDesignSize orderDesignEntry">XxX cm</span>
                         <span class="orderDesignAmount orderDesignEntry">amount: N/A</span>
