--- a/src/main/resources/templates/profile/forgotPassword.html
+++ b/src/main/resources/templates/profile/forgotPassword.html
@@ -44,7 +44,7 @@
                             if (response.status === 200)
                             {
                                 console.log("The password reset link has been sent");
-                                showBasketPopup("THe password reset link has been sent to " + email, false);
+                                showBasketPopup("The password reset link has been sent to " + email, false);
                             } else
                             {
                                 console.log("Something went wrong while sending a reset link, request status: " + response.status);
