--- a/src/main/resources/templates/products/familyTree.html
+++ b/src/main/resources/templates/products/familyTree.html
@@ -250,7 +250,7 @@ Learn more: https://developers.facebook.com/docs/sharing/webmasters -->
                         </div>
 
                     </div>
-                    <button id="addToBasket" class="largeButton" data-toggle="modal" data-target="#addToBasketModal" onclick="updatePrice()">
+                    <button id="addToBasket" class="largeButton" onclick="updatePrice()">
                         <span th:text="#{familyTree.option.add}"></span>
                     </button>
 
