--- a/src/main/resources/templates/products/familyTree.html
+++ b/src/main/resources/templates/products/familyTree.html
@@ -244,9 +244,8 @@ Learn more: https://developers.facebook.com/docs/sharing/webmasters -->
                         <div class="fancyContent" id="bigFontSizeInputContainer">
                             <input type="checkbox" class="switch-input" id="fontSizeInput">
                         </div>
-
                     </div>
-                    <button id="addToBasket" class="largeButton" onclick="updatePrice()">
+                    <button id="addToBasket" class="largeButton" onclick="checkLogin()">
                         <span th:text="#{familyTree.option.add}"></span>
                     </button>
 
