--- a/src/main/resources/templates/home/cookieTermsAndConditionsDanish.html
+++ b/src/main/resources/templates/home/cookieTermsAndConditionsDanish.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Cookie promt</title>
+    <title>Terms and Conditions</title>
+    <link th:href="@{/img/logos/treecreateLogo/browserLogo.svg}" rel="icon">
 </head>
 <body style="background-color: #f2f2f2; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
 <div style="max-width: 40em; margin: auto; padding: 5vh 0; font-size: 16px; line-height: 1.8; text-shadow: 0 1px 0 #ffffff;">
