--- a/src/main/resources/templates/home/productExample.html
+++ b/src/main/resources/templates/home/productExample.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Product page</title>
+    <html lang="en" xmlns:th="http://www.thymeleaf.org">
     <link th:href="@{/styles/index.css}" rel="stylesheet">
     <link th:href="@{/styles/productExample.css}" rel="stylesheet">
     <link th:href="@{/styles/productNavbar.css}" rel="stylesheet">
