--- a/src/main/resources/templates/home/unsubscribeSuccess.html
+++ b/src/main/resources/templates/home/unsubscribeSuccess.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Failed to unsubscribe</title>
+    <link th:href="@{/img/logos/treecreateLogo/browserLogo.svg}" rel="icon">
 </head>
 <body>
     <p>Unsubscribed</p>
