--- a/src/main/resources/templates/profile/orders.html
+++ b/src/main/resources/templates/profile/orders.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Orders</title>
     <link th:href="@{/img/logos/treecreateLogo/browserLogo.svg}" rel="icon">
+    <link th:href="@{/img/logos/treecreateLogo/browserLogo.svg}" rel="icon">
     <link th:href="@{/styles/index.css}" rel="stylesheet">
     <link th:href="@{/styles/productNavbar.css}" rel="stylesheet">
     <link th:href="@{/styles/productFooter.css}" rel="stylesheet">
