--- a/src/main/resources/templates/products/familyTree.html
+++ b/src/main/resources/templates/products/familyTree.html
@@ -154,7 +154,7 @@ Learn more: https://developers.facebook.com/docs/sharing/webmasters -->
                                 <div class="deleteDraggableBoxButton" onclick="deleteBox(this)"></div>
                             </div>
                             <div class="draggableBoxMiddleRow">
-                                <span class="input draggableBoxInput" role="textbox" contenteditable
+                                <span class="input draggableBoxInput" role="textbox" contenteditable spellcheck="false"
                                       onkeypress="return (this.innerText.length <= boxInputLimit)"></span>
                                 <!--The length needs to adjust to the box size-->
                             </div>
