--- a/src/main/resources/templates/profile/orders.html
+++ b/src/main/resources/templates/profile/orders.html
@@ -71,6 +71,7 @@
                 </div>
                 <span class="orderTotalPrice orderInfo">Total Price: N/A dkk</span>
                 <span class="orderTransactionId orderInfo">Order Id: N/A</span>
+                <input type="button" class="orderCompletePaymentBtn orderInfo" value="Complete Payment" onclick="">
             </section>
             <span id="orderInfoDisclaimer" th:text="#{basket.issue.text}"></span>
             <script>generateOrders()</script>
