--- a/src/main/resources/static/styles/productNavbar.css
+++ b/src/main/resources/static/styles/productNavbar.css
@@ -12,6 +12,7 @@
 #navBar
 {
     display: flex;
+    flex-flow: row wrap;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
@@ -137,4 +138,24 @@ a::before {
     {
         width: 7vh;
     }
+}
+
+#verificationBanner
+{
+    display: none;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: fit-content;
+    background-color: var(--actionColor);
+}
+
+#verificationButton
+{
+    padding: 0 0.5vw;
+    border: none;
+    border-radius: 12px;
+    background-color: var(--actionColor);
+    color: white;
 }
