--- a/src/main/resources/static/styles/profile.css
+++ b/src/main/resources/static/styles/profile.css
@@ -122,13 +122,13 @@ a:hover
     background-color: var(--actionColor);
     color: white;
     font-size: var(--fontRegular);
-    filter: drop-shadow(0 3px 4px rgba(0, 0, 0, 0.20));
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.25);
 }
 
 #accountInfoSubmitBtn:hover
 {
     transform:scale(0.9);
-    filter: drop-shadow(0 0 3px rgba(0, 0, 0, 0));
+    box-shadow: none;
 }
 
 @media all and (min-width: 200px) and (max-width: 1024px)
