--- a/src/main/resources/static/styles/treeCollection.css
+++ b/src/main/resources/static/styles/treeCollection.css
@@ -79,14 +79,14 @@
     border: none;
     background-color: var(--actionColor);
     color: white;
-    filter: drop-shadow(0 2px 4px rgba(0, 0, 0, 0.25));
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.25);
 }
 
 .collectionInfoBtn:hover
 {
     transform:scale(0.9);
     color: white;
-    filter: drop-shadow(0 0 3px rgba(0, 0, 0, 0));
+    box-shadow: none;
 }
 
 #checkoutButton, #addDesignButton
