--- a/src/main/resources/templates/products/productTemplate.html
+++ b/src/main/resources/templates/products/productTemplate.html
@@ -175,11 +175,11 @@
                     <span th:text="#{navbar.profile}"></span>
                     <hr class="hoverLine">
                 </a>
-                <script th:src="@{/js/changeLanguage.js}"></script>
+                <!-- <script th:src="@{/js/changeLanguage.js}"></script>
                 <a id="changeLanguage" onclick="changeLanguage()">
                     <span th:text="#{landing.changeLanguage}"></span>
                     <hr class="hoverLine">
-                </a>
+                </a>-->
             </div>
             <div id="verificationBanner">
                 <span>Please</span>
