--- a/src/main/resources/static/styles/basket.css
+++ b/src/main/resources/static/styles/basket.css
@@ -69,6 +69,24 @@
     height: fit-content;
 }
 
+#acceptAndPay, #applyDiscountBtn
+{
+    width: 400px;
+    padding: 5px 2vw;
+    border-radius: 12px;
+    border: none;
+    background-color: var(--actionColor);
+    color: white;
+    font-size: var(--fontRegular);
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.25);
+}
+
+#acceptAndPay:hover, #applyDiscountBtn:hover
+{
+    transform:scale(0.9);
+    box-shadow: none;
+}
+
 #customerInformation label
 {
     margin-left: 0.5vw;
