--- a/src/main/resources/templates/products/productTemplate.html
+++ b/src/main/resources/templates/products/productTemplate.html
@@ -225,9 +225,9 @@
                 <span class="title" th:text="#{footer.product.title}"></span><br>
                 <span th:text="#{footer.product.text}"></span>
                 <div style="margin-top:10px;"></div>
-                <img th:src="@{~/img/icons/danishTransportIcon.svg}" alt="Danish Transport" class="icon">
+                <!-- <img th:src="@{~/img/icons/danishTransportIcon.svg}" alt="Danish Transport" class="icon">
                 <img th:src="@{~/img/icons/ecoPackageIcon.svg}" alt="Eco friendly packaging" class="icon">
-                <img th:src="@{~/img/icons/recyclingIcon.svg}" alt="Recycled" class="icon">
+                <img th:src="@{~/img/icons/recyclingIcon.svg}" alt="Recycled" class="icon"> -->
             </div>
             <div class="section">
                 <span class="title" th:text="#{footer.address.title}"></span><br>
