--- a/src/main/resources/templates/profile/treeCollections.html
+++ b/src/main/resources/templates/profile/treeCollections.html
@@ -46,7 +46,7 @@
         </div>
         <div id="details">
             <section class="collectionContainer">
-                <div class="designImage"></div>
+                <!-- <div class="designImage"></div> -->
                 <div class="designInfo">
                     <section class="infoHeader">
                         <span class="orderName" th:text="#{collection.name}">Untitled</span>
